# yack

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build-deploy.yml
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Header.tsx  Input.tsx  KbdShort.tsx  TokenRegistration.tsx  Tooltip.tsx
src/components/Chat/: Bubble.tsx  Input.tsx
src/components/markdown/: Code.tsx  index.ts
src/constants/: API.ts
src/helpers/: fetcher.ts  localstorage.ts  poster.ts  store.ts
src/hooks/: useChatCompletion.ts  useGlobalShortcut.tsx  useKeyPress.ts  useNavigation.ts  useUsage.ts
src/pages/: history.tsx  index.tsx  settings.tsx
src/pages/chat/: [id].tsx
src/svg/: index.tsx
src/types/: ssm.d.ts
