[package]
name = "yack"
version = "0.5.3"
description = "Instantly access ChatGPT on your Mac, spotlight style!"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all", "shell-open", "system-tray", "updater", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cocoa = "0.24.1"
objc = "0.2.7"
open = "4.1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
